# idmyteam-server

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Dockerfile.test  Jenkinsfile  README.md  codecov.yml  codeql-analysis.yml  deploy.sh  docker-compose.yml  helm-values.yml  requirements.txt  stack.yml  supervisord.conf  test_requirements.txt  travis_requirements.txt
ML/: Dockerfile  (+9 more)
web/idmyteam/: MANIFEST.in  apps.py  setup.cfg  setup.py  structs.py  views.py
web/idmyteam/idmyteam/: __init__.py  helpers.py  structs.py
web/idmyteam/idmyteam/static/css/: main.css  main.css.map  main.sass
web/idmyteam/idmyteam/static/css/idmyteam-sass/: main.css  main.css.map  main.sass
web/idmyteam/idmyteam/static/css/modules/: _all.sass  _tutorials.sass
web/idmyteam/idmyteam/static/js/: script.js
web/idmyteam/idmyteam/templates/: base.html
web/idmyteam/idmyteam/templates/materializecssform/: field.html
web/idmyteam/idmyteam/templatetags/: define_action.py  materializecss.py
web/idmyteam/idmyteam/tests/: test_structs.py
web/idmyteam/static/: cssmain.css  cssmain.css.map
web/idmyteam/static/css/: email.css  email.sass  main.css  main.css.map
web/idmyteam/static/css/idmyteam-sass/: main.css.map  main.sass
web/idmyteam/static/css/modules/: _all.sass
web/idmyteam/static/images/: icon.ai
web/idmyteam/static/js/: captcha-handler.js  script.js
web/idmyteam/templates/: base.html  form.html
web/idmyteam/templates/materializecssform/: field.html
web/idmyteam/templatetags/: define_action.py  materializecss.py
web/idmyteam/tests/: test_structs.py
(+253 files in other folders)
